# FactGridBot

./: README.md  pyproject.toml  tox.ini
.github/workflows/: CI.yml  python-publish.yml
src/factgridbot/: bot.py  cli.py  factgrid.py  wikibase.py  wikidata.py
src/factgridbot/models/: error.py  property_mapping.py
src/factgridsyncwdbot/: bot.py  cli.py  factgrid.py  wikibase.py  wikidata.py
src/factgridsyncwdbot/models/: error.py
tests/: basetest.py  test_bot.py  test_factgrid.py  test_wikidata.py
