[project]
name = "FactGridBot"
version = "0.1.0"
description = "A specialized Wikibase bot designed to synchronize and manage data between Wikidata and FactGrid."
readme = "README.md"
license= "Apache-2.0"
authors = [
    { name = "tholzheim", email = "tim.holzheim@rwth-aachen.de" }
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.10.2",
    "rich>=13.9.4",
    "sparqlwrapper>=2.0.0",
    "typer>=0.13.1",
    "wikibaseintegrator>=0.12.10",
]

[project.scripts]
factgridbot = "factgridbot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
    "tox>=4.23.2",
]

[tool.ruff]
line-length = 120
format.preview = true
format.docstring-code-line-length = 100
format.docstring-code-format = true
lint.select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.mypy]
follow_imports = "skip"
strict_optional = true
ignore_missing_imports = true


